# mathematical-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/coursework/hw10/code/: main.py
archive/coursework/hw11/: Code.gdoc
archive/coursework/hw11/code/: main.py
archive/coursework/hw12/code/: dataset.csv  dataset_separable.csv  main.py
archive/coursework/hw13/: make_datasets.R
archive/coursework/hw13/code/: dataset_non_separable.csv  graph_laplacian_ex.py  main1.py  main2.py  main3.py
archive/coursework/hw14/code/: autoencoder_mnist.py  supervised_encoder_mnist.py
archive/coursework/hw2/code/: main.py  main2.py  main3.py  mnist.py  rank2-example.py  senators.csv
archive/coursework/hw3/code/: main.py  test.csv
archive/coursework/hw4/code/: main_2.py  main_3.py  main_3_e_ii.py
archive/coursework/hw8/code/: main1.py  (+1 more)
archive/coursework/hw9/: make_dataset.R
archive/mnist-original/: .gitignore  README.md
archive/mnist-original/archive/: bp1++.py  bp1+.py  bp1.py  bp2+++.py  bp2++.py  bp2+.py  bp2.py
archive/mnist-original/results/: weights.txt
archive/mnist-original/src/: train.py
docs/: mnist-merge.md
examples/: run_digits_pca.py
src/mathematical_ml/: classification.py  clustering.py  decomposition.py  kernels.py  linear_algebra.py
src/mathematical_ml/mnist/: __init__.py  evaluate.py  feedforward.py
src/mathematical_ml_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classification.py  test_clustering.py  test_decomposition.py  test_linear_algebra.py  test_mnist_original.py
(+9 files in other folders)
