[project]
name = "mathematical-ml-from-scratch"
version = "0.1.0"
description = "Numerical methods and mathematical machine learning algorithms implemented from scratch in Python/NumPy."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
