[project]
name = "mathematical-ml-from-scratch"
version = "0.1.0"
description = "Computational mathematics and mathematical machine learning implementations adapted from coursework."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "qpsolvers",
    "quadprog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
exclude = ["src/mathematical_ml/mnist/*.py"]
